--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -243,3 +243,4 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 .searchword2 { background: #cff; }
 .searchword3 { background: #ccf; }
 .searchword4 { background: #fcf; }
+.att-label { float:left; width: 7em; text-align: right; margin-right: .5em; }
