--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -40,6 +40,28 @@ tr.browser-listhdr th {
   padding: 0 1em 0 0;
   font-size: 13px;
 }
+#revinfo { 
+  border: 1px solid #d7d7d7;
+  background: #f7f7f0;
+  padding: .5em 1em;
+  margin: 1em 0;
+}
+#revinfo h2 { 
+ margin: 0 1em;
+ padding: 0;
+ display: inline;
+ float: left;
+ font: bold 11px verdana,arial,'Bitstream Vera Sans',helvetica, sans-serif;
+}
+#revchange { 
+ font: normal 11px verdana,arial,'Bitstream Vera Sans',helvetica, sans-serif;
+ padding: 0;
+ margin: 0 2em;
+ float: left;
+ display: inline;
+}
+#revchange ul { padding: 0; margin: 0 2em; }
+#revchange p { margin: 0; padding: 0; }
 #browser-list { 
  clear: both; 
  margin-top: 1em;
